# Registry

./: .gitignore  README.md
ports/zqf-cef-prebuilt/: portfile.cmake  usage  vcpkg.json
ports/zqf-cef-prebuilt/src/: .gitignore  CMakeLists.txt  CMakePresets.json
ports/zqf-cef-prebuilt/src/cmake/: Config.cmake.in  cef_installer.cmake  cef_patch.cmake
ports/zqf-cmake-modules/: portfile.cmake  usage  vcpkg.json
ports/zqf-cmake-modules/src/: CMakeLists.txt  CMakePresets.json  Config.cmake.in
ports/zqf-cmake-modules/src/cmake/: zqf_cef.cmake  zqf_doxygen.cmake  zqf_installer.cmake  zqf_optimizer.cmake  zqf_profiles.cmake  zqf_settings.cmake
ports/zqf-cmake-modules/src/cmake/profiles/: .clang-format  .clangd
ports/zqf-kirix2-tjs2/: portfile.cmake  vcpkg.json
ports/zqf-zut-zxjson/: portfile.cmake  usage  vcpkg.json
test/: xmake.lua
test/vcpkg/: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
test/vcpkg/cmake/: ZQF_VCPKG.cmake
test/vcpkg/src/: main.cpp
test/xmake/src/: main.cpp
versions/: baseline.json
versions/z-/: zqf-cef-prebuilt.json  zqf-cmake-modules.json  zqf-kirix2-tjs2.json  zqf-zut-zxjson.json
